--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
             <ul>
               <li><a href="slr.html">SLR Parser</a></li>
               
-              <li><a href="#">LALR(1) Parser</a></li>
+              <li><a href="lalr1.html">LALR(1) Parser</a></li>
 
-              <li><a href="#">LL(1) Parser</a></li>
+              <li><a href="ll1.html">LL(1) Parser</a></li>
 
-              <li><a href="#">LR(1) Parser</a></li>
+              <li><a href="lr1.html">LR(1) Parser</a></li>
 
-              <li><a href="#">Turing </a></li>
+              <li><a href="turing.html">Turing </a></li>
             </ul>
           </li>
          
