--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@ Operator grammar: A grammar is said to be operator grammar if there does not exi
 
           <div class="col-lg-6" data-aos="zoom-in" data-aos-delay="100">
             <div class="member d-flex align-items-start">
-              <div class="pic"><img src="assets/img/Tanmay.jpg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="assets/img/tanmay.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Tanmay Shukla</h4>
                 <span>Full Stack Developer</span>
