--- a/lr1.html
+++ b/lr1.html
@@ -32,19 +32,18 @@ body * { font-family:courier; }
 td { horizontal-align: middle; vertical-align: top; white-space: nowrap; }
 th { white-space: nowrap; }
 </style>
-<script language="javascript" src="assets/js/tools.js"></script>
-<script language="javascript" src="assets/js/tools.js"></script>
-<script language="javascript" src="assets/js/grammar.js"></script>
-<script language="javascript" src="assets/js/underscore.js"></script>
-<script language="javascript" src="assets/js/grammarview.js"></script>
-<script language="javascript" src="assets/js/lalr1item.js"></script>
-<script language="javascript" src="assets/js/lrclosuretable.js"></script>
-<script language="javascript" src="assets/js/lrclosuretableview.js"></script>
-<script language="javascript" src="assets/js/tree.js"></script>
-<script language="javascript" src="assets/js/treeview.js"></script>
-<script language="javascript" src="assets/js/lrtable.js"></script>
-<script language="javascript" src="assets/js/lrtableview.js"></script>
-<script language="javascript" src="assets/js/lrparseview.js"></script>
+<script language="javascript" src="js/underscore.js"></script>
+<script language="javascript" src="js/tools.js"></script>
+<script language="javascript" src="js/grammar.js"></script>
+<script language="javascript" src="js/grammarview.js"></script>
+<script language="javascript" src="js/lr1item.js"></script>
+<script language="javascript" src="js/lrclosuretable.js"></script>
+<script language="javascript" src="js/lrclosuretableview.js"></script>
+<script language="javascript" src="js/tree.js"></script>
+<script language="javascript" src="js/treeview.js"></script>
+<script language="javascript" src="js/lrtable.js"></script>
+<script language="javascript" src="js/lrtableview.js"></script>
+<script language="javascript" src="js/lrparseview.js"></script>
 </head>
 <body>
 <script language="javascript">
